# multi-country-price-sync

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
Referencias/: contexto_inicial.md  definiciones_base.md  master_prompt.md  plan_6_horas.md
docker/: heavy.Dockerfile  mock-woocommerce.Dockerfile  prefect-base.Dockerfile
docker/postgres-init/: 00-create-app-schema.sql
migrations/: alembic.ini  env.py
migrations/versions/: 0001_initial_schema.py
scripts/: seed_db.sh
src/deploy/: deploy_heavy.py  deploy_light.py
src/mock_woocommerce/: __init__.py  app.py  data.py  seed.py
src/pipelines/heavy/: flow.py  tasks.py
src/pipelines/light/: flow.py  tasks.py
src/shared/: config.py  db.py  http_clients.py  models.py  schemas.py
tests/: conftest.py
tests/integration/: test_idempotency_light.py
tests/unit/: test_drift_detection.py
