[project]
name = "multi-country-price-sync"
version = "0.1.0"
description = "Multi-country product price synchronization with drift detection and alerts"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Nicolas Castaneda" }]

dependencies = [
    "prefect==3.6.29",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "psycopg[binary]>=3.2,<4",
    "httpx>=0.28,<1",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "prefect-docker>=0.7.1",
]

[project.optional-dependencies]
# Heavy pipeline only — kept out of the light/base image
heavy = ["pandas>=2.2,<3"]

[dependency-groups]
dev = ["pytest>=8.3,<9", "pytest-asyncio>=0.24,<1", "ruff>=0.9,<1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipelines", "src/shared", "src/mock_woocommerce", "src/deploy"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = [
    "E501", # line-too-long handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"migrations/**" = ["E501", "I001"]
"tests/**" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
